source/stylesheets/master.css.scss
@import 'variables.css.scss';

body {
	font-size: 15px;
	line-height: 1.8;
	background-color: #F3F5F6;
}

.container {
    padding: 0;
}

.clear {
	clear: both;
}

a {
	color: $blue;
	&:hover {
		color: $blue;
		text-decoration: underline;
	}
}

h2 {
	font-family: serif;
	&.faq {
		margin-top: 50px;
		cursor: pointer;
	}
}

.navbar-default {
	background: transparent;
	border: none;
	border-radius: 0;
	border-bottom: 1px solid $gray;

	.navbar-nav > li > a {
		color: $black;
		border-bottom: 2px solid $lightgray;
		border-color: $lightgray;
		margin-left: 10px;
		font-size: 16px;
		padding: 16px 0 18px 0;
		width: 115px;

		&:hover, &.current {
			border-color: $blue;
		}
	}

	.navbar-brand {
		color: $black;
		font-size: 16px;

		> img {
			width: 30px;
		}
	}
}

.container .jumbotron {
	padding-left: 24px;
	padding-top: 38px;
	padding-bottom: 22px;
	margin-bottom: 42px;
	background: transparent;
	font-family: serif;
	border-bottom: 1px solid $gray;
	color: $gray;
	border-radius: 0;

	.mainheading {
		display: block;
		margin-top: -5px;
		line-height: 64px;
	}

	h1 {
		margin: 0;
		font-size: 60px;

		> small {
			font: 18px sans-serif;
			font-weight: 400;
			text-transform: uppercase;
		}

		.name {
			font-size: 34px;
		}
	}
}



.lead {
	font: 30px serif;
	margin-bottom: 22px;
	line-height: 40px;
}

header {
	img {
		margin-right: 5px;
	}
}

footer {
	border-top: 1px solid $gray;
	padding-top: 20px;
	padding-bottom: 120px;

	img {
		width: 30px;
		margin-right: 5px;
	}

	ul {
		list-style: none;
		padding: 0;

		li {
			margin-bottom: 10px;
		}
	}
}

.story {
	display: block;
	border-top: 6px solid $blue;
	background: #ffffff;
	padding-bottom: 12px;

	&:hover {
		text-decoration: none;
	}

	img {
		width: 100%;

	}

	hr {
		border-color: #ddd;
		margin: 10px 0;
	}

	h3 {
		margin: 0;
		font-family: serif;
		font-size: 22px/28px;
		color: #333;
		margin: 20px 16px 20px;

		small {
			font: 12px sans-serif;
			text-transform: uppercase;
			font-weight: 400;
			color: $gray;
		}
	}

	&.bignav {
		margin-top: 40px;
		margin-bottom: 20px;
	}

	p {
		margin: 20px 16px 14px;
	}

	.icon {
		display: block;
		width: 160px;
		margin: 0 auto;
	}

	table {
		margin: 20px;
		width: 95%;

		tr {
			height: 40px;

			& > td:last-child {
				text-align: right;
			}
		}
	}
}

.blackout {
	padding: 2px;
	color: #000;
	background: #000;

	&:hover {
		background: transparent;
	}
}

.blue {
	color: $blue;
}


blockquote {
	border: none;
	color: $blue;
	font: 120px serif;
	line-height: 50px;
	margin-top: 60px;
	width: 100%;
	margin-bottom: 60px;

	p {
		color: #000;
		font: 26px/36px serif;
		font-weight: normal;
		width: 80%;
		margin-left: 80px;
	}

	footer {
		padding: 0;
		padding-top: 10px;
		border: none;
		font-size: 12px;

		p {
			font: 18px sans-serif;
			margin-top: 25px;
			margin-left: 170px;
			color: $gray;

			small {
				display: block;
				text-transform: none;
				font-style: italic;

				&:before {
					content: '';
				}
			}
		}

		&:before {
			padding: 0;
			margin: 0;
			content: "";
		}

		img {
			width: 72px;
			margin-left: 80px;
			height: 72px;
			border-radius: 50%;
			float: left;
			border: 4px solid $blue;
		}
	}

	&:before {
		display: inline-block;
		float: left;
		content: '“';
	}

	&:after {
		margin-top: -60px;
		float: right;
		content: '”';
	}

}


.scorecard {
	margin: 5px 0 10px 0;
	border-top: 7px solid $blue;
	background: #ffffff;
	padding: 20px 16px 0;

	h2 {
		margin: 0;
		margin-bottom: 10px;
		font: 12px sans-serif;
		text-transform: uppercase;
		color: #666;
	}

	dl {
		margin: 0;

		dt {
			font: 22px/28px serif;
		}

		dd {
			font-size: 100px;
			line-height: 160px;
			color: $blue;
			text-align: center;

			small {
				font-size: 40px;
			}
		}
	}

}

@media (max-width: 768px){
	.navbar-default .navbar-brand {
		font-size: 10px;
	}

	.container .jumbotron .mainheading{
		font-size: 35px;
		line-height: 50px;
	}

	.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a {
		border-bottom: none;
		border-left-width: 2px;
		border-left-style: solid;
		padding-left: 10px;
	}

	blockquote {
		margin: 0;
		padding: 0;
		font-size: 60px;

		p {
			width: auto;
			margin: 0;
			margin-left: 40px;
		}

		footer {
			img {
				margin-left: 40px;
			}

			p {
				margin-left: 130px;
			}
		}
	}

	p.lead {
		font-size: 20px;
	}

	.story, .scorecard {
		margin: 0;
		margin-top: 30px;
	}

	.story table {
		width: 90%;
	}
}

